Protobuf change and action functions for scenario
