# services/scenario-manager/main.go
@@ -99,6 +99,7 @@ func SetupRoutes(app *fiber.App) {
 	scenario.Get("/:id", routes.GetScenario)
 	scenario.Put("/:id", routes.UpdateScenario)
 	scenario.Delete("/:id", routes.DeleteScenario)
+	scenario.Post("/action", routes.ScenarioActoins)
 
 	// Topology
 	topology := app.Group(apiURL + "/topologies")
